--- a/survey/main.css
+++ b/survey/main.css
@@ -1,1 +1,370 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+/* Box sizing rules */
+@import url("https://fonts.googleapis.com/css2?family=Lora&family=Montserrat&family=Open+Sans&display=swap");
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role=list],
+ol[role=list] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+
+  *,
+*::before,
+*::after {
+    -webkit-animation-duration: 0.01ms !important;
+            animation-duration: 0.01ms !important;
+    -webkit-animation-iteration-count: 1 !important;
+            animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+body {
+  background-color: #fffefe;
+  font-family: Lora, Open Sans, sans-serif;
+  letter-spacing: 0.4px;
+}
+
+.container {
+  max-width: 900px;
+  margin: auto;
+}
+
+header {
+  padding: 16px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo {
+  font-family: Montserrat, Open Sans, sans-serif;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 2rem;
+  line-height: 0.9;
+  color: #c03324;
+}
+.logo :link {
+  text-decoration: none;
+  color: #c03324;
+}
+.logo :hover {
+  color: #052f53 !important;
+}
+.logo :visited {
+  color: #c03324;
+}
+
+#title {
+  font-family: Lora, Open Sans, sans-serif;
+  font-size: 2.5rem;
+  color: #052f53;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: bold;
+}
+
+#description {
+  font-size: 1.3rem;
+  text-align: center;
+  margin: 16px auto;
+  padding: 16px 0;
+  border-bottom: 5px solid rgba(193, 137, 130, 0.6);
+}
+
+#survey-form {
+  font-family: Lora, Open Sans, sans-serif !important;
+  padding: 16px;
+  font-size: 1.2rem;
+}
+#survey-form .company-info {
+  display: grid;
+  row-gap: 2ch;
+  grid-template-columns: 50% auto;
+}
+#survey-form .survey-value {
+  padding-top: 2ch;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  row-gap: 2ch;
+}
+#survey-form .survey-value #tetratech-products {
+  grid-column: span 2;
+}
+#survey-form .survey-value .product-inputs {
+  display: grid;
+  grid-column: span 2;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  background: #fffefe;
+  padding: 16px;
+}
+#survey-form .survey-value .product-inputs label {
+  border: 3px solid #c03324;
+  border-radius: 1rem;
+  padding: 16px 24px;
+  margin: 16px;
+  text-align: center;
+  cursor: pointer;
+}
+#survey-form .survey-value .product-inputs label:hover {
+  background-color: rgba(193, 137, 130, 0.6);
+  color: white;
+}
+#survey-form .survey-value .product-inputs .checkbox {
+  display: none;
+}
+#survey-form .survey-value .product-inputs input:checked + label {
+  background-color: #c03324;
+  color: white;
+  font-weight: bold;
+}
+#survey-form .survey-value #tetratech-recommendation {
+  grid-column: span 2;
+}
+#survey-form .survey-value .radio-inputs {
+  display: grid;
+  grid-column: span 2;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  background: #fffefe;
+  padding: 16px;
+}
+#survey-form .survey-value .radio-inputs label {
+  border: 3px solid #c03324;
+  border-radius: 1rem;
+  padding: 16px 8px;
+  margin: 8px;
+  text-align: center;
+  cursor: pointer;
+  align-self: center;
+}
+#survey-form .survey-value .radio-inputs label:hover {
+  background-color: rgba(193, 137, 130, 0.6);
+  color: white;
+}
+#survey-form .survey-value .radio-inputs input {
+  display: none;
+}
+#survey-form .survey-value .radio-inputs input:checked + label {
+  background-color: #c03324;
+  color: white;
+  font-weight: bold;
+}
+
+.label-textarea {
+  grid-column: span 2;
+}
+
+textarea {
+  grid-column: span 2;
+  border: 2px solid rgba(193, 137, 130, 0.6);
+}
+
+input {
+  border: none;
+  border-bottom: 2px solid rgba(193, 137, 130, 0.6);
+}
+
+input:focus {
+  background-color: rgba(193, 137, 130, 0.6);
+  outline: none;
+  border-bottom: 2px solid #052f53;
+}
+
+#dropdown {
+  border: none;
+  border-bottom: 2px solid rgba(193, 137, 130, 0.6);
+}
+
+button {
+  display: block;
+  background-color: #fffefe;
+  color: #c03324;
+  font-family: Lora, Open Sans, sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: bold;
+  border-color: #c03324;
+  outline: none;
+  border-style: solid;
+  border-width: 3px;
+  border-radius: 1rem;
+  width: 200px;
+  padding: 16px;
+  margin: 32px auto;
+}
+
+button:hover {
+  background-color: rgba(193, 137, 130, 0.6);
+  color: white;
+}
+
+button:focus {
+  background-color: #c03324;
+  color: white;
+}
+
+.footer {
+  padding: 16px 0;
+  border-top: 5px solid rgba(193, 137, 130, 0.6);
+  padding-top: 50px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.footer .logo {
+  justify-self: right;
+  padding-right: 20px;
+}
+.footer .address {
+  justify-items: center;
+  font-size: 1rem;
+  overflow: hidden;
+}
+.footer .social {
+  justify-self: right;
+  padding-right: 10px;
+  text-decoration: none;
+  font-size: 1.5rem;
+  letter-spacing: 15px;
+  color: #c03324;
+}
+.footer .social :link {
+  text-decoration: none;
+  color: #c03324;
+}
+.footer .social :hover {
+  color: #052f53 !important;
+}
+.footer .social :visited {
+  color: #c03324;
+}
+
+@media (max-width: 900px) {
+  header {
+    padding: 32px 32px;
+  }
+
+  #survey-form .survey-value .product-inputs {
+    display: grid;
+    grid-column: span 2;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 3em;
+  }
+  #survey-form .survey-value .radio-inputs {
+    display: grid;
+    grid-column: span 2;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 3em;
+  }
+}
+@media (max-width: 450px) {
+  .logo {
+    display: none;
+  }
+
+  #title {
+    padding-left: 32px;
+  }
+
+  #description {
+    padding: 16px 32px;
+  }
+
+  #survey-form .company-info {
+    grid-template-columns: 1fr;
+  }
+  #survey-form .survey-value {
+    grid-template-columns: 1fr;
+  }
+  #survey-form .survey-value .product-inputs {
+    display: grid;
+    grid-column: span 2;
+    grid-template-columns: 1fr;
+    row-gap: 3em;
+    justify-self: center;
+  }
+  #survey-form .survey-value .radio-inputs {
+    display: grid;
+    grid-column: span 2;
+    grid-template-columns: 1fr;
+    row-gap: 1em;
+    justify-self: center;
+  }
+
+  .footer .social {
+    font-size: 3rem;
+    padding-left: 16px;
+  }
+
+  textarea {
+    width: 100%;
+  }
+}
+@media (max-width: 350px) {
+  #title {
+    padding-left: 0px;
+  }
+
+  .footer .social {
+    font-size: 2rem;
+    padding-left: 16px;
+  }
+}/*# sourceMappingURL=main.css.map */
