--- a/survey/main.scss
+++ b/survey/main.scss
@@ -2,7 +2,7 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 /* Remove default margin */
@@ -16,37 +16,37 @@ figure,
 blockquote,
 dl,
 dd {
-  margin: 0;
+	margin: 0;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role="list"],
 ol[role="list"] {
-  list-style: none;
+	list-style: none;
 }
 
 /* Set core root defaults */
 html:focus-within {
-  scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 
 /* Set core body defaults */
 body {
-  min-height: 100vh;
-  text-rendering: optimizeSpeed;
-  line-height: 1.5;
+	min-height: 100vh;
+	text-rendering: optimizeSpeed;
+	line-height: 1.5;
 }
 
 /* A elements that don't have a class get default styles */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+	text-decoration-skip-ink: auto;
 }
 
 /* Make images easier to work with */
 img,
 picture {
-  max-width: 100%;
-  display: block;
+	max-width: 100%;
+	display: block;
 }
 
 /* Inherit fonts for inputs and buttons */
@@ -54,23 +54,23 @@ input,
 button,
 textarea,
 select {
-  font: inherit;
+	font: inherit;
 }
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
-  html:focus-within {
-    scroll-behavior: auto;
-  }
+	html:focus-within {
+		scroll-behavior: auto;
+	}
 
-  *,
-  *::before,
-  *::after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
+	*,
+	*::before,
+	*::after {
+		animation-duration: 0.01ms !important;
+		animation-iteration-count: 1 !important;
+		transition-duration: 0.01ms !important;
+		scroll-behavior: auto !important;
+	}
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Lora&family=Montserrat&family=Open+Sans&display=swap");
@@ -79,344 +79,337 @@ $color-primary: #052f53;
 $color-accent-lighten: #c1898299;
 $color-accent: #c03324;
 $color-whitespace: #fffefe;
-$font-stack-logo: Montserrat,
-Open Sans,
-sans-serif;
-$font-stack-regular: Lora,
-Open Sans,
-sans-serif;
+$font-stack-logo: Montserrat, Open Sans, sans-serif;
+$font-stack-regular: Lora, Open Sans, sans-serif;
 
 body {
-  background-color: $color-whitespace;
-  font-family: $font-stack-regular;
-  letter-spacing: 0.4px;
+	background-color: $color-whitespace;
+	font-family: $font-stack-regular;
+	letter-spacing: 0.4px;
 }
 
 .container {
-  max-width: 900px;
-  margin: auto;
+	max-width: 900px;
+	margin: auto;
 }
 
 header {
-  padding: 16px 0px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+	padding: 16px 0px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .logo {
-  font-family: Montserrat, Open Sans, sans-serif;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 2rem;
-  line-height: 0.9;
-  color: $color-accent;
+	font-family: Montserrat, Open Sans, sans-serif;
+	text-transform: uppercase;
+	text-decoration: none;
+	font-weight: bold;
+	font-size: 2rem;
+	line-height: 0.9;
+	color: $color-accent;
 
-  :link {
-    text-decoration: none;
-    color: $color-accent;
-  }
+	:link {
+		text-decoration: none;
+		color: $color-accent;
+	}
 
-  :hover {
-    color: $color-primary !important;
-  }
+	:hover {
+		color: $color-primary !important;
+	}
 
-  :visited {
-    color: $color-accent;
-  }
-
+	:visited {
+		color: $color-accent;
+	}
 }
 
 #title {
-  font-family: $font-stack-regular;
-  font-size: 2.5rem;
-  color: $color-primary;
-  text-transform: uppercase;
-  text-align: center;
-  font-weight: bold;
+	font-family: $font-stack-regular;
+	font-size: 2.5rem;
+	color: $color-primary;
+	text-transform: uppercase;
+	text-align: center;
+	font-weight: bold;
 }
 
 #description {
-  font-size: 1.3rem;
-  text-align: center;
-  margin: 16px auto;
-  padding: 16px 0;
-  border-bottom: 5px solid $color-accent-lighten;
+	font-size: 1.3rem;
+	text-align: center;
+	margin: 16px auto;
+	padding: 16px 0;
+	border-bottom: 5px solid $color-accent-lighten;
 }
 
 #survey-form {
-  font-family: $font-stack-regular !important;
-  padding: 16px;
-  font-size: 1.2rem;
+	font-family: $font-stack-regular !important;
+	padding: 16px;
+	font-size: 1.2rem;
 
-  .company-info {
-    display: grid;
-    row-gap: 2ch;
-    grid-template-columns: 50% auto;
-  }
+	.company-info {
+		display: grid;
+		row-gap: 2ch;
+		grid-template-columns: 50% auto;
+	}
 
-  .survey-value {
-    padding-top: 2ch;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    row-gap: 2ch;
+	.survey-value {
+		padding-top: 2ch;
+		display: grid;
+		grid-template-columns: 50% 50%;
+		row-gap: 2ch;
 
-    #tetratech-products {
-      grid-column: span 2;
-    }
+		#tetratech-products {
+			grid-column: span 2;
+		}
 
-    .product-inputs {
-      display: grid;
-      grid-column: span 2;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-      background: $color-whitespace;
-      padding: 16px;
+		.product-inputs {
+			display: grid;
+			grid-column: span 2;
+			grid-template-columns: 1fr 1fr 1fr 1fr;
+			background: $color-whitespace;
+			padding: 16px;
 
-      label {
-        border: 3px solid $color-accent;
-        border-radius: 1rem;
-        padding: 16px 24px;
-        margin: 16px;
-        text-align: center;
-        cursor: pointer;
-      }
+			label {
+				border: 3px solid $color-accent;
+				border-radius: 1rem;
+				padding: 16px 24px;
+				margin: 16px;
+				text-align: center;
+				cursor: pointer;
+			}
 
-      label:hover {
-        background-color: $color-accent-lighten;
-        color: white;
-      }
+			label:hover {
+				background-color: $color-accent-lighten;
+				color: white;
+			}
 
-      .checkbox {
-        display: none;
-      }
+			.checkbox {
+				display: none;
+			}
 
-      input:checked+label {
-        background-color: $color-accent;
-        color: white;
-        font-weight: bold;
-      }
-    }
+			input:checked + label {
+				background-color: $color-accent;
+				color: white;
+				font-weight: bold;
+			}
+		}
 
-    #tetratech-recommendation {
-      grid-column: span 2;
-    }
+		#tetratech-recommendation {
+			grid-column: span 2;
+		}
 
-    .radio-inputs {
-      display: grid;
-      grid-column: span 2;
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-      background: $color-whitespace;
-      padding: 16px;
+		.radio-inputs {
+			display: grid;
+			grid-column: span 2;
+			grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+			background: $color-whitespace;
+			padding: 16px;
 
-      label {
-        border: 3px solid $color-accent;
-        border-radius: 1rem;
-        padding: 16px 8px;
-        margin: 8px;
-        text-align: center;
-        cursor: pointer;
-        align-self: center;
-      }
+			label {
+				border: 3px solid $color-accent;
+				border-radius: 1rem;
+				padding: 16px 8px;
+				margin: 8px;
+				text-align: center;
+				cursor: pointer;
+				align-self: center;
+			}
 
-      label:hover {
-        background-color: $color-accent-lighten;
-        color: white;
-      }
+			label:hover {
+				background-color: $color-accent-lighten;
+				color: white;
+			}
 
-      input {
-        display: none;
-      }
+			input {
+				display: none;
+			}
 
-      input:checked+label {
-        background-color: $color-accent;
-        color: white;
-        font-weight: bold;
-      }
-    }
-  }
+			input:checked + label {
+				background-color: $color-accent;
+				color: white;
+				font-weight: bold;
+			}
+		}
+	}
 }
 
 .label-textarea {
-  grid-column: span 2;
+	grid-column: span 2;
 }
 
 textarea {
-  grid-column: span 2;
-  border: 2px solid $color-accent-lighten;
+	grid-column: span 2;
+	border: 2px solid $color-accent-lighten;
 }
 
 input {
-  border: none;
-  border-bottom: 2px solid $color-accent-lighten;
+	border: none;
+	border-bottom: 2px solid $color-accent-lighten;
 }
 
 input:focus {
-  background-color: $color-accent-lighten;
-  outline: none;
-  border-bottom: 2px solid $color-primary;
+	background-color: $color-accent-lighten;
+	outline: none;
+	border-bottom: 2px solid $color-primary;
 }
 
 #dropdown {
-  border: none;
-  border-bottom: 2px solid $color-accent-lighten;
+	border: none;
+	border-bottom: 2px solid $color-accent-lighten;
 }
 
 button {
-  display: block;
-  background-color: $color-whitespace;
-  color: $color-accent;
-  font-family: $font-stack-regular;
-  text-transform: uppercase;
-  text-align: center;
-  font-weight: bold;
-  border-color: $color-accent;
-  outline: none;
-  border-style: solid;
-  border-width: 3px;
-  border-radius: 1rem;
-  width: 200px;
-  padding: 16px;
-  margin: 32px auto;
+	display: block;
+	background-color: $color-whitespace;
+	color: $color-accent;
+	font-family: $font-stack-regular;
+	text-transform: uppercase;
+	text-align: center;
+	font-weight: bold;
+	border-color: $color-accent;
+	outline: none;
+	border-style: solid;
+	border-width: 3px;
+	border-radius: 1rem;
+	width: 200px;
+	padding: 16px;
+	margin: 32px auto;
 }
 
 button:hover {
-  background-color: $color-accent-lighten;
-  color: white;
+	background-color: $color-accent-lighten;
+	color: white;
 }
 
 button:focus {
-  background-color: $color-accent;
-  color: white;
+	background-color: $color-accent;
+	color: white;
 }
 
 .footer {
-  padding: 16px 0;
-  border-top: 5px solid $color-accent-lighten;
-  padding-top: 50px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+	padding: 16px 0;
+	border-top: 5px solid $color-accent-lighten;
+	padding-top: 50px;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
 
-  .logo {
-    justify-self: right;
-    padding-right: 20px;
-  }
+	.logo {
+		justify-self: right;
+		padding-right: 20px;
+	}
 
-  .address {
-    justify-items: center;
-    font-size: 1rem;
-    overflow: hidden;
-  }
+	.address {
+		justify-items: center;
+		font-size: 1rem;
+		overflow: hidden;
+	}
 
-  .social {
-    justify-self: right;
-    padding-right: 10px;
-    text-decoration: none;
-    font-size: 1.5rem;
-    letter-spacing: 15px;
-    color: $color-accent;
+	.social {
+		justify-self: right;
+		padding-right: 10px;
+		text-decoration: none;
+		font-size: 1.5rem;
+		letter-spacing: 15px;
+		color: $color-accent;
 
-    :link {
-      text-decoration: none;
-      color: $color-accent;
-    }
+		:link {
+			text-decoration: none;
+			color: $color-accent;
+		}
 
-    :hover {
-      color: $color-primary !important;
-    }
+		:hover {
+			color: $color-primary !important;
+		}
 
-    :visited {
-      color: $color-accent;
-    }
-  }
-
+		:visited {
+			color: $color-accent;
+		}
+	}
 }
 
 @media (max-width: 900px) {
-  header {
-    padding: 32px 32px;
-  }
+	header {
+		padding: 32px 32px;
+	}
 
-  #survey-form {
-    .survey-value {
-      .product-inputs {
-        display: grid;
-        grid-column: span 2;
-        grid-template-columns: 1fr 1fr;
-        row-gap: 3em;
-      }
+	#survey-form {
+		.survey-value {
+			.product-inputs {
+				display: grid;
+				grid-column: span 2;
+				grid-template-columns: 1fr 1fr;
+				row-gap: 3em;
+			}
 
-      .radio-inputs {
-        display: grid;
-        grid-column: span 2;
-        grid-template-columns: 1fr 1fr;
-        row-gap: 3em;
-      }
-    }
-  }
+			.radio-inputs {
+				display: grid;
+				grid-column: span 2;
+				grid-template-columns: 1fr 1fr;
+				row-gap: 3em;
+			}
+		}
+	}
 }
 
 @media (max-width: 450px) {
-  .logo {
-    display: none;
-  }
+	.logo {
+		display: none;
+	}
 
-  #title {
-    padding-left: 32px;
-  }
+	#title {
+		padding-left: 32px;
+	}
 
-  #description {
-    padding: 16px 32px;
-  }
+	#description {
+		padding: 16px 32px;
+	}
 
-  #survey-form {
+	#survey-form {
+		.company-info {
+			grid-template-columns: 1fr;
+		}
 
-    .company-info {
-      grid-template-columns: 1fr;
-    }
+		.survey-value {
+			grid-template-columns: 1fr;
 
-    .survey-value {
-      grid-template-columns: 1fr;
+			.product-inputs {
+				display: grid;
+				grid-column: span 2;
+				grid-template-columns: 1fr;
+				row-gap: 3em;
+				justify-self: center;
+			}
 
-      .product-inputs {
-        display: grid;
-        grid-column: span 2;
-        grid-template-columns: 1fr;
-        row-gap: 3em;
-        justify-self: center;
-      }
+			.radio-inputs {
+				display: grid;
+				grid-column: span 2;
+				grid-template-columns: 1fr;
+				row-gap: 1em;
+				justify-self: center;
+			}
+		}
+	}
 
-      .radio-inputs {
-        display: grid;
-        grid-column: span 2;
-        grid-template-columns: 1fr;
-        row-gap: 1em;
-        justify-self: center;
-      }
-    }
-  }
+	.footer {
+		.social {
+			font-size: 3rem;
+			padding-left: 16px;
+		}
+	}
 
-  .footer {
-    .social {
-      font-size: 3rem;
-      padding-left: 16px;
-    }
-  }
-
-  textarea {
-    width: 100%;
-  }
+	textarea {
+		width: 100%;
+	}
 }
 
 @media (max-width: 350px) {
-  #title {
-    padding-left: 0px;
-  }
+	#title {
+		padding-left: 0px;
+	}
 
-  .footer {
-    .social {
-      font-size: 2rem;
-      padding-left: 16px;
-    }
-  }
+	.footer {
+		.social {
+			font-size: 2rem;
+			padding-left: 16px;
+		}
+	}
 }
