--- a/tribute/main.scss
+++ b/tribute/main.scss
@@ -2,7 +2,7 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 /* Remove default margin */
@@ -16,37 +16,37 @@ figure,
 blockquote,
 dl,
 dd {
-  margin: 0;
+	margin: 0;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role="list"],
 ol[role="list"] {
-  list-style: none;
+	list-style: none;
 }
 
 /* Set core root defaults */
 html:focus-within {
-  scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 
 /* Set core body defaults */
 body {
-  min-height: 100vh;
-  text-rendering: optimizeSpeed;
-  line-height: 1.5;
+	min-height: 100vh;
+	text-rendering: optimizeSpeed;
+	line-height: 1.5;
 }
 
 /* A elements that don't have a class get default styles */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+	text-decoration-skip-ink: auto;
 }
 
 /* Make images easier to work with */
 img,
 picture {
-  max-width: 100%;
-  display: block;
+	max-width: 100%;
+	display: block;
 }
 
 /* Inherit fonts for inputs and buttons */
@@ -54,333 +54,332 @@ input,
 button,
 textarea,
 select {
-  font: inherit;
+	font: inherit;
 }
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
-  html:focus-within {
-    scroll-behavior: auto;
-  }
+	html:focus-within {
+		scroll-behavior: auto;
+	}
 
-  *,
-  *::before,
-  *::after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
+	*,
+	*::before,
+	*::after {
+		animation-duration: 0.01ms !important;
+		animation-iteration-count: 1 !important;
+		transition-duration: 0.01ms !important;
+		scroll-behavior: auto !important;
+	}
 }
 
-$font-stack-logo: 'Ubuntu',
-Sans-Serif;
-$font-stack-regular: 'Open Sans',
-Sans-Serif;
+$font-stack-logo: "Ubuntu", Sans-Serif;
+$font-stack-regular: "Open Sans", Sans-Serif;
 $color-whitespace: #fffefe;
 $color-whitespace-darker: #8d8d8d;
-$color-accent:#f50053;
+$color-accent: #f50053;
 $color-accent-darken: #920031;
 $color-primary: #0f2460;
 
 a {
-  text-decoration: none;
-  color: inherit;
-  scroll-behavior: smooth !important;
+	text-decoration: none;
+	color: inherit;
+	scroll-behavior: smooth !important;
 }
 
 a:visited {
-  color: inherit;
+	color: inherit;
 }
 
 body {
-  font-family: $font-stack-regular;
-  color: $color-primary;
-  background: $color-whitespace;
-  max-width: 1200px;
-  margin: 0 auto;
+	font-family: $font-stack-regular;
+	color: $color-primary;
+	background: $color-whitespace;
+	max-width: 1200px;
+	margin: 0 auto;
 }
 
 header {
-  padding: 32px 0 8px 0px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: $color-whitespace;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
-  max-width: 1200px;
-  margin: 0 auto;
+	padding: 32px 0 8px 0px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	background-color: $color-whitespace;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 1;
+	max-width: 1200px;
+	margin: 0 auto;
 }
 
 .logo {
-  font-family: $font-stack-logo;
-  font-size: 2rem;
-  text-align: center;
-  font-weight: bold;
+	font-family: $font-stack-logo;
+	font-size: 2rem;
+	text-align: center;
+	font-weight: bold;
 
-  :link {
-    text-decoration: none;
-  }
+	:link {
+		text-decoration: none;
+	}
 
-  :hover {
-    color: $color-accent;
-  }
+	:hover {
+		color: $color-accent;
+	}
 }
 
 .tabs {
-  font-size: 1.3rem;
-  justify-self: end;
+	font-size: 1.3rem;
+	justify-self: end;
 
-  input {
-    display: none
-  }
+	input {
+		display: none;
+	}
 
-  label {
-    padding: 24px 4px;
+	label {
+		padding: 24px 4px;
 
-    a {
-      padding: 24px 4px;
-      cursor: pointer;
-    }
-  }
+		a {
+			padding: 24px 4px;
+			cursor: pointer;
+		}
+	}
 
-  label:hover {
-    color: $color-accent;
-    background: rgb(245, 0, 83);
-    background: linear-gradient(360deg, rgba(245, 0, 82, 0.15) 0%, rgba(255, 254, 254, 0.1) 23%);
-    color: $color-accent;
-  }
+	label:hover {
+		color: $color-accent;
+		background: rgb(245, 0, 83);
+		background: linear-gradient(
+			360deg,
+			rgba(245, 0, 82, 0.15) 0%,
+			rgba(255, 254, 254, 0.1) 23%
+		);
+		color: $color-accent;
+	}
 }
 
 .emphasize {
-  color: $color-accent;
+	color: $color-accent;
 }
 
 .about-us {
-  margin: 224px 0px 128px 0px;
-  display: flex;
+	margin: 224px 0px 128px 0px;
+	display: flex;
 
-  .about-us-text {
-    h1 {
-      font-weight: bold;
-      font-size: 3rem;
-      text-transform: uppercase;
-    }
+	.about-us-text {
+		h1 {
+			font-weight: bold;
+			font-size: 3rem;
+			text-transform: uppercase;
+		}
 
-    p {
-      margin: 32px 0;
-      font-size: 1.3rem;
-      text-align: justify;
-    }
-  }
+		p {
+			margin: 32px 0;
+			font-size: 1.3rem;
+			text-align: justify;
+		}
+	}
 
-  .about-us-img {
-    max-width: 50%;
-    clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
-    margin: auto;
-  }
+	.about-us-img {
+		max-width: 50%;
+		clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+		margin: auto;
+	}
 }
 
 .portrait {
+	.title {
+		font-weight: bold;
+		font-size: 3rem;
+		text-align: center;
+	}
 
-  .title {
-    font-weight: bold;
-    font-size: 3rem;
-    text-align: center;
-  }
+	.img-caption {
+		text-transform: cursive;
+		text-align: center;
+	}
 
-  .img-caption {
-    text-transform: cursive;
-    text-align: center;
-  }
-
-  .image {
-    height: auto;
-    max-width: 100%;
-    margin: 0 auto;
-    clip-path: circle(50% at 50% 50%);
-  }
+	.image {
+		height: auto;
+		max-width: 100%;
+		margin: 0 auto;
+		clip-path: circle(50% at 50% 50%);
+	}
 }
 
 .one,
 .two,
 .three {
-  display: flex;
-  padding: 150px 0px 128px 0px;
-  border-top: 2px solid $color-whitespace-darker;
+	display: flex;
+	padding: 150px 0px 128px 0px;
+	border-top: 2px solid $color-whitespace-darker;
 
-  .title {
-    padding: 16px;
-  }
+	.title {
+		padding: 16px;
+	}
 
-  .img-caption {
-    padding: 16px;
-  }
+	.img-caption {
+		padding: 16px;
+	}
 
-  .tribute {
-    font-size: 1.3rem;
-    align-self: center;
-    text-align: justify;
-    padding: 0 0 0 128px;
-  }
+	.tribute {
+		font-size: 1.3rem;
+		align-self: center;
+		text-align: justify;
+		padding: 0 0 0 128px;
+	}
 
-  .link {
-    margin: 32px auto 0 auto;
-    background-color: $color-whitespace;
-    border: 3px solid $color-accent;
-    border-radius: 8px;
-    padding: 8px 0;
-    text-align: center;
-    width: 192px;
-    color: $color-accent;
-    cursor: pointer;
-    user-select: none;
-  }
+	.link {
+		margin: 32px auto 0 auto;
+		background-color: $color-whitespace;
+		border: 3px solid $color-accent;
+		border-radius: 8px;
+		padding: 8px 0;
+		text-align: center;
+		width: 192px;
+		color: $color-accent;
+		cursor: pointer;
+		user-select: none;
+	}
 
-  .link:hover {
-    background-color: $color-accent;
-    color: $color-whitespace;
-  }
+	.link:hover {
+		background-color: $color-accent;
+		color: $color-whitespace;
+	}
 
-  .link:active {
-    background-color: $color-accent-darken;
-    color: $color-whitespace;
-    border: 3px solid $color-accent-darken;
-  }
+	.link:active {
+		background-color: $color-accent-darken;
+		color: $color-whitespace;
+		border: 3px solid $color-accent-darken;
+	}
 }
 
 .footer {
-  padding: 16px 0 32px 0;
-  border-top: 2px solid $color-whitespace-darker;
-  display: grid;
-  grid-template-columns: 20% 20% 60%;
+	padding: 16px 0 32px 0;
+	border-top: 2px solid $color-whitespace-darker;
+	display: grid;
+	grid-template-columns: 20% 20% 60%;
 
-  .logo {
-    justify-self: right;
-  }
+	.logo {
+		justify-self: right;
+	}
 
-  .address {
-    padding-left: 32px;
-    margin: auto 0;
-  }
+	.address {
+		padding-left: 32px;
+		margin: auto 0;
+	}
 
-  .socials {
-    justify-self: right;
-    font-size: 2rem;
-    margin: auto 0;
-    word-spacing: 64px;
+	.socials {
+		justify-self: right;
+		font-size: 2rem;
+		margin: auto 0;
+		word-spacing: 64px;
 
-    :hover {
-      color: $color-accent;
-    }
+		:hover {
+			color: $color-accent;
+		}
 
-    :active {
-      color: $color-accent-darken;
-    }
-  }
+		:active {
+			color: $color-accent-darken;
+		}
+	}
 }
 
 @media (max-width: 1200px) {
-  body {
-    margin: 0 32px;
-  }
+	body {
+		margin: 0 32px;
+	}
 
-  header {
-    margin: 0 32px;
-  }
+	header {
+		margin: 0 32px;
+	}
 
-  .about-us-img {
-    padding: 32px;
-  }
+	.about-us-img {
+		padding: 32px;
+	}
 }
 
 @media (max-width: 950px) {
-  .about-us {
-    display: flex;
-    flex-direction: column-reverse;
+	.about-us {
+		display: flex;
+		flex-direction: column-reverse;
 
-    .about-us-img {
-      position: relative;
-      object-fit: cover;
-      padding: 0;
-      margin: 16px 0;
-      clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-      height: 128px;
-      width: auto;
-      max-width: 100%;
-    }
-  }
+		.about-us-img {
+			position: relative;
+			object-fit: cover;
+			padding: 0;
+			margin: 16px 0;
+			clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+			height: 128px;
+			width: auto;
+			max-width: 100%;
+		}
+	}
 }
 
 @media (max-width: 850px) {
-  .logo {
-    display: none;
-  }
+	.logo {
+		display: none;
+	}
 
-  .tabs {
-    margin: 0 auto 16px auto;
-  }
+	.tabs {
+		margin: 0 auto 16px auto;
+	}
 
-  .about-us {
-    margin-top: 128px;
-  }
+	.about-us {
+		margin-top: 128px;
+	}
 
-  .one,
-  .two,
-  .three {
-    padding: 96px 0;
+	.one,
+	.two,
+	.three {
+		padding: 96px 0;
 
-    .tribute {
-      padding-left: 32px;
-    }
-  }
+		.tribute {
+			padding-left: 32px;
+		}
+	}
 
-  .footer {
-    grid-template-columns: 20% 80%;
-  }
-
+	.footer {
+		grid-template-columns: 20% 80%;
+	}
 }
 
 @media (max-width: 680px) {
+	header {
+		position: absolute;
+	}
 
-  header {
-    position: absolute;
-  }
+	.tabs {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		font-size: 1rem;
+		text-align: center;
+	}
 
-  .tabs {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    font-size: 1rem;
-    text-align: center;
-  }
+	.about-us {
+		.about-us-text {
+			h1 {
+				font-size: 2rem;
+			}
 
-  .about-us {
-    .about-us-text {
-      h1 {
-        font-size: 2rem;
-      }
+			p {
+				font-size: 1rem;
+			}
+		}
+	}
 
-      p {
-        font-size: 1rem;
-      }
-    }
-  }
+	.portrait {
+		.title {
+			font-size: 2rem;
+		}
+	}
 
-  .portrait {
-    .title {
-      font-size: 2rem;
-    }
-  }
-
-  .one,
-  .two,
-  .three {
-    .tribute {
-      font-size: 1rem;
-    }
-  }
+	.one,
+	.two,
+	.three {
+		.tribute {
+			font-size: 1rem;
+		}
+	}
 }
