--- a/doc-page/main.css
+++ b/doc-page/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -393,6 +394,11 @@ body {
   margin-top: 16px;
 }
 
+input,
+label {
+  display: none;
+}
+
 .nav-stack {
   display: flex;
   flex-direction: column;
@@ -415,11 +421,23 @@ body {
   color: #fffefe;
   border-top: 2px solid #920031;
 }
+.nav-stack .slider-selector:hover + .slider {
+  display: flex;
+  line-height: 24px;
+}
 .nav-stack .slider {
   display: none;
 }
-.nav-stack .slider-selector:hover .slider {
-  display: block !important;
+.nav-stack .slider li {
+  list-style: none;
+}
+.nav-stack .slider li:before {
+  content: "•";
+  color: #f50053;
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
 }
 
 .technical_documentation {
@@ -441,6 +459,7 @@ section .description {
   font-size: 2rem;
   font-weight: bold;
   margin: 32px 0;
+  text-align: left;
 }
 section .description:first-child {
   margin: 0 0 32px;
@@ -462,12 +481,87 @@ section + section {
 
 img {
   display: block;
-  width: auto;
-  height: 500px;
+  width: 600px;
+  height: auto;
   padding: 32px 0;
   margin: auto;
 }
 
 code {
   display: none;
+}
+
+@media (max-width: 1100px) {
+  img {
+    width: 400px;
+  }
+}
+@media (max-width: 900px) {
+  #main-doc {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #navbar {
+    display: flex;
+    flex-direction: column;
+    border-right: none;
+    min-width: 100%;
+    min-height: 0%;
+  }
+  #navbar #menu-box {
+    display: none;
+  }
+  #navbar .menu {
+    display: inline-block;
+    border: 1px solid #f50053;
+    padding: 8px;
+    background-color: #f50053;
+    color: #fffefe;
+    font-weight: bold;
+    text-align: center;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    transition: all 250ms ease-out;
+  }
+  #navbar .menu:hover {
+    background-color: #920031;
+    border: 1px solid #920031;
+  }
+  #navbar .nav-stack {
+    text-align: left;
+    margin: 0;
+    max-height: 0px;
+    overflow: hidden;
+    border-top: none;
+    border-bottom: 1px solid #f50053;
+  }
+  #navbar input:checked ~ .nav-stack {
+    max-height: 100%;
+    background-color: rgba(230, 230, 230, 0.3215686275);
+  }
+
+  .navbar-top {
+    flex-direction: row;
+    padding: 16px 16px;
+    border-bottom: 1px solid #f50053;
+  }
+  .navbar-top .logo {
+    font-size: 1.3rem;
+    margin: auto 0;
+  }
+  .navbar-top header {
+    font-size: 1.1rem;
+    padding-left: 16px;
+    margin: auto 0;
+  }
+
+  .technical_documentation {
+    position: relative;
+    margin: 128px 0px 32px 0px;
+    max-width: 100%;
+    padding: 0;
+  }
 }/*# sourceMappingURL=main.css.map */
