--- a/landing-page/main.scss
+++ b/landing-page/main.scss
@@ -445,7 +445,7 @@ nav {
 		color: $color-whitespace-darken;
 	}
 
-	:focus {
+	:active {
 		color: $color-whitespace;
 	}
 }
@@ -464,7 +464,7 @@ nav {
 	display: flex;
 	margin-top: 103px;
 	margin: 103px auto 0 auto;
-	padding: 0 160px 0 160px;
+	padding: 0 32px 0 32px;
 	column-gap: 56px;
 }
 
@@ -483,6 +483,7 @@ h2 {
 h1 {
 	font-weight: bold;
 	font-size: 3rem;
+	line-height: 56px;
 }
 
 #hero-img {
@@ -497,7 +498,8 @@ h1 {
 	margin: auto auto;
 	line-height: 32px;
 	column-gap: 56px;
-	padding: 256px 0;
+	padding: 256px 32px;
+	text-align: justify;
 }
 
 h2 {
@@ -688,23 +690,29 @@ i {
 	text-align: center;
 	padding: 64px 0px 64px 0px;
 	border-top: 3px solid $color-accent-darken;
-	max-width: 1200px;
+	max-width: 1400px;
 	margin: 0 auto;
 }
 
 .testimonies {
 	display: flex;
 	flex-wrap: wrap;
-	max-width: 1200px;
+	max-width: 1300px;
 	margin: 0 auto;
 	justify-content: space-evenly;
+	margin-bottom: 256px;
 }
 
 .testimony-card {
-	background-color: $color-whitespace-darker;
-	color: $color-whitespace;
+	background-color: #eaeaea;
+	border: 3px solid $color-accent;
+	border-radius: 10px;
+	color: $color-primary;
 	width: 250px;
 	padding: 16px;
+	text-align: justify;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	margin: 16px 0;
 }
 
 .testimonials-top {
@@ -754,5 +762,177 @@ i {
 		:active {
 			color: $color-accent-darken;
 		}
+	}
+}
+
+form {
+	display: flex;
+	flex-direction: column;
+	margin: 64px auto 128px auto;
+	max-width: 1200px;
+}
+
+.newsletter {
+	display: flex;
+	flex-direction: column-reverse;
+	gap: 64px;
+
+	label {
+		max-width: 400px;
+		margin: 0 auto;
+		text-align: center;
+		font-family: $font-stack-logo;
+		font-weight: bold;
+		color: $color-accent;
+		font-size: 2rem;
+	}
+
+	input {
+		width: 300px;
+		margin: 0 auto;
+		border: none;
+		border-bottom: 2px solid $color-accent-darken;
+	}
+}
+
+#submit {
+	margin: 64px auto 16px auto;
+	background-color: $color-whitespace;
+	border: 3px solid $color-accent-darken;
+	color: $color-accent-darken;
+	border-radius: 8px;
+	padding: 8px 0;
+	font-family: $font-stack-logo;
+	text-align: center;
+	width: 156px;
+	cursor: pointer;
+	user-select: none;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+#submit:hover {
+	border: 3px solid $color-accent;
+	color: $color-whitespace;
+	background-color: $color-accent;
+}
+
+#submit:active {
+	background-color: $color-accent-darken;
+	border: 3px solid $color-accent-darken;
+}
+
+@media (max-width: 950px) {
+	h1 {
+		font-size: 2rem;
+	}
+
+	#hero-img {
+		width: 400px;
+		height: 400px;
+	}
+
+	.hero {
+		column-gap: 24px;
+	}
+
+	.hero-left {
+		line-height: 24px;
+		font-size: 1.2rem;
+	}
+
+	.product-card-stack {
+		flex-direction: column;
+		padding: 124px 0;
+		row-gap: 64px;
+	}
+
+	.video-desc {
+		line-height: 24px;
+	}
+}
+
+@media (max-width: 800px) {
+	nav {
+		font-size: 1.2rem;
+		column-gap: 8px;
+	}
+
+	.hero-bg {
+		background: rgb(245, 0, 83);
+		background: linear-gradient(
+			180deg,
+			rgba(245, 0, 83, 1) 30%,
+			rgba(255, 254, 254, 0) 80%
+		);
+	}
+
+	.hero {
+		flex-direction: column-reverse;
+	}
+
+	#hero-img {
+		width: auto;
+		height: auto;
+		max-width: 700px;
+	}
+
+	.hero-left {
+		color: $color-primary;
+	}
+
+	.video-desc {
+		flex-direction: column-reverse;
+		padding: 64px 32px;
+	}
+
+	iframe {
+		height: 300px;
+		width: auto;
+	}
+
+	.numbers {
+		padding: 32px 32px;
+	}
+
+	.features {
+		padding: 64px 32px;
+	}
+
+	.product-card-stack {
+		padding: 64px 32px;
+	}
+
+	.pre-test {
+		padding: 64px 32px;
+	}
+
+	.footer {
+		column-gap: 16px;
+	}
+}
+
+@media (max-width: 600px) {
+	.logo {
+		margin: 0 auto;
+	}
+
+	header {
+		flex-direction: column;
+		padding-bottom: 32px;
+
+		.logo-img {
+			margin: auto 0;
+		}
+	}
+
+	.logo-link {
+		text-align: left;
+		margin: 0;
+	}
+
+	nav {
+		margin: 0 auto;
+		font-size: 1.2em;
 	}
 }
