--- a/portfolio/main.scss
+++ b/portfolio/main.scss
@@ -393,246 +393,167 @@ html {
 }
 
 body {
-	font-family: $font-stack-regular;
-	font-size: 1.1rem;
-	color: $color-primary;
 	background-color: $color-whitespace;
+	font-family: $font-stack-regular;
+	color: $color-primary;
 }
 
 a {
-	text-decoration: none;
 	color: inherit;
+	text-decoration: none;
+	:visited {
+		color: inherit;
+	}
 }
 
-a:visited {
-	color: inherit;
+.emphasize {
+	color: $color-accent;
 }
 
 header {
 	display: flex;
-	justify-content: space-between;
-	background-color: $color-accent;
-	color: white;
-	padding: 0 24px;
+	padding: 24px 40px;
+	background-color: $color-primary;
 	position: fixed;
-	width: 100%;
 	top: 0;
+	width: 100%;
+	color: $color-whitespace;
+	justify-content: space-between;
 	z-index: 1;
-	user-select: none;
-	box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
-		rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 
-	.logo-img {
-		height: 64px;
-		margin: auto 0;
+	.logo-link {
+		font-family: $font-stack-logo;
+		font-size: 1.3rem;
+		font-weight: bold;
 	}
-}
 
-.logo-link {
-	display: flex;
-	font-size: 1.5rem;
-	column-gap: 16px;
-	font-weight: bold;
-}
-
-nav {
-	display: flex;
-	column-gap: 32px;
-	font-size: 1.4rem;
-	margin: auto 48px;
-
-	:hover {
+	.logo-link:hover {
 		color: $color-whitespace-darken;
 	}
 
-	:active {
-		color: $color-whitespace;
+	.logo-link:active {
+		color: $color-accent;
+	}
+
+	#navbar {
+		display: flex;
+		column-gap: 16px;
+		margin: auto 0;
+		font-size: 1.2rem;
+		padding-right: 80px;
+		top: 0;
+
+		a:hover {
+			color: $color-whitespace-darken;
+		}
+
+		a:active {
+			color: $color-accent;
+		}
 	}
 }
 
-.hero-bg {
-	background: rgb(245, 0, 83);
-	background: linear-gradient(
-		180deg,
-		rgba(245, 0, 83, 1) 70%,
-		rgba(255, 254, 254, 0) 100%
-	);
-}
-
-.hero {
-	max-width: 1200px;
-	display: flex;
-	margin-top: 103px;
-	margin: 103px auto 0 auto;
-	padding: 0 32px 0 32px;
-	column-gap: 56px;
-}
-
-.hero-left {
+#welcome-section {
+	background-color: $color-primary;
 	color: $color-whitespace;
-	margin: auto 0;
-	line-height: 32px;
-	text-align: justify;
-}
-
-h1,
-h2 {
-	font-family: $font-stack-logo;
-}
-
-h1 {
-	font-weight: bold;
-	font-size: 3rem;
-	line-height: 56px;
-}
-
-#hero-img {
-	width: 600px;
-	height: auto;
-}
-
-.video-desc {
-	display: flex;
-	flex-direction: row-reverse;
-	max-width: 1200px;
-	margin: auto auto;
-	line-height: 32px;
-	column-gap: 56px;
-	padding: 256px 32px;
-	text-align: justify;
-}
-
-h2 {
-	font-weight: bold;
-	font-size: 2rem;
-}
-
-.video-description {
-	text-align: justify;
-}
-
-iframe {
-	margin: auto 0;
-}
-
-.numbers {
-	display: flex;
-	background-color: green;
-	padding: 32px 160px 32px 160px;
-	justify-content: space-between;
-	margin: 0;
-	box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-		rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-		rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-	animation: color-change-2x 10s linear infinite alternate both;
-}
-
-@keyframes color-change-2x {
-	0% {
-		background: $color-accent;
-	}
-	100% {
-		background: $color-primary-lighten;
-	}
-}
-
-.number {
-	display: flex;
-	flex-direction: column;
-	color: $color-whitespace;
-	font-weight: bold;
-	font-size: 2rem;
 	text-align: center;
-	font-family: $font-stack-logo;
-
-	h2 {
-		margin: 8px;
-	}
-
-	p {
-		font-size: 1.3rem;
-		margin: 0;
-	}
 }
 
-.features {
-	display: flex;
-	flex-direction: column;
-	margin: 0 auto;
-	max-width: 1200px;
-	padding: 256px 0 256px 0;
-	gap: 96px;
-}
-
-.feature-descriptions {
-	display: flex;
-	column-gap: 64px;
-	justify-content: center;
-}
-
-i {
+.welcome-section-description {
+	padding: 300px 0;
 	margin: auto 0;
-	font-size: 3rem;
-	color: $color-accent;
-}
+	font-family: $font-stack-logo;
+	font-size: 2rem;
 
-.description-text {
-	display: flex;
-	flex-direction: column;
+	h1 {
+		text-decoration: underline;
+	}
 
-	h2,
 	p {
-		margin: 0;
+		font-family: $font-stack-regular;
 	}
 }
 
-.product-card-stack {
-	display: flex;
-	border-top: 3px solid $color-accent-darken;
-	padding: 256px 0;
-	margin: 0 auto;
+.about {
+	display: grid;
+	grid-template-columns: 1fr 2fr 1fr;
+	padding: 124px 32px;
 	max-width: 1200px;
-	justify-content: space-between;
+	margin: 0 auto;
+	column-gap: 64px;
+
+	img {
+		margin: auto;
+		clip-path: circle(50% at 50% 50%);
+		max-width: 100%;
+		height: auto;
+	}
 }
 
-.product-card {
-	width: 280px;
-	outline: 8px solid $color-accent;
-	box-shadow: $color-accent-darken 24px 24px;
-	margin: 0 auto;
-	display: flex;
-	flex-direction: column;
-	user-select: none;
+.about-description {
+	font-size: 1.3rem;
+	text-align: justify;
+	margin: auto 0;
 
 	h2 {
-		margin: 0px;
-		padding: 0px;
-		background-color: $color-accent;
-		color: $color-whitespace;
-		padding-bottom: 8px;
+		color: $color-accent;
+	}
+}
+
+.tools {
+	font-size: 1.3rem;
+	text-align: justify;
+	text-align: end;
+	line-height: 24px;
+
+	h2:hover {
+		color: $color-accent;
 	}
 
-	p {
-		padding: 0 16px;
+	p:hover {
+		color: $color-accent;
+	}
+}
+
+.projects {
+	color: $color-whitespace;
+}
+
+.projects-bg {
+	display: flex;
+	flex-wrap: wrap;
+	background-color: $color-accent;
+	width: 100%;
+	height: 100%;
+}
+
+.project-tile {
+	display: flex;
+	flex-direction: column;
+	padding: 64px 32px;
+	max-width: 500px;
+	height: auto;
+	margin: auto;
+	text-align: center;
+
+	img {
+		width: 500px;
+		height: auto;
+		border: 10px solid $color-primary-lighten;
+		box-shadow: $color-primary 20px 20px;
 	}
 
-	ul {
-		list-style: none;
-		line-height: 24px;
-	}
-
-	.price {
+	h2 {
+		padding-top: 24px;
 		font-family: $font-stack-logo;
-		font-weight: bold;
 		font-size: 2rem;
-		text-align: center;
 	}
 
-	.select-btn {
+	a {
 		margin: 24px auto 16px auto;
-		background-color: $color-whitespace;
-		border: 3px solid $color-accent-darken;
-		color: $color-accent-darken;
+		background-color: $color-accent;
+		border: 3px solid $color-accent;
+		color: $color-whitespace;
 		border-radius: 8px;
 		padding: 8px 0;
 		font-family: $font-stack-logo;
@@ -644,296 +565,157 @@ i {
 		font-weight: bold;
 	}
 
-	.select-btn:hover {
-		border: 3px solid $color-accent;
-		color: $color-whitespace;
-		background-color: $color-accent;
-	}
-
-	.select-btn:active {
-		background-color: $color-accent-darken;
-		border: 3px solid $color-accent-darken;
-	}
-}
-
-#tetraoffice {
-	outline: 8px solid $color-primary-lighten;
-	box-shadow: $color-primary 24px 24px;
-
-	h2 {
-		background-color: $color-primary-lighten;
-		color: $color-whitespace;
-	}
-
-	.select-btn {
-		border: 3px solid $color-primary;
-		color: $color-primary;
-	}
-
-	.select-btn:hover {
+	a:hover {
 		border: 3px solid $color-primary-lighten;
 		color: $color-whitespace;
 		background-color: $color-primary-lighten;
 	}
 
-	.select-btn:active {
-		background-color: $color-primary;
-		border: 3px solid $color-primary;
+	a:active {
+		background-color: $color-accent-darken;
+		border: 3px solid $color-accent-darken;
 	}
 }
 
-.pre-test {
-	color: $color-accent;
-	font-family: $font-stack-logo;
-	font-size: 2rem;
-	font-weight: bold;
-	text-align: center;
-	padding: 64px 0px 64px 0px;
-	border-top: 3px solid $color-accent-darken;
-	max-width: 1400px;
-	margin: 0 auto;
-}
-
-.testimonies {
-	display: flex;
-	flex-wrap: wrap;
-	max-width: 1300px;
-	margin: 0 auto;
-	justify-content: space-evenly;
-	margin-bottom: 256px;
-}
-
-.testimony-card {
-	background-color: #eaeaea;
-	border: 3px solid $color-accent;
-	border-radius: 10px;
-	color: $color-primary;
-	width: 250px;
-	padding: 16px;
-	text-align: justify;
-	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-	margin: 16px 0;
-}
-
-.testimonials-top {
-	display: flex;
-	gap: 16px;
-	font-size: 1.3rem;
-}
-
-.testimony-img {
-	height: 64px;
-	clip-path: circle(50% at 50% 50%);
-}
-
-.footer {
-	padding: 16px 0 32px 0;
-	border-top: 2px solid $color-whitespace-darker;
-	display: flex;
-	justify-content: space-evenly;
-
-	.footer-right {
-		display: flex;
-		.logo {
-			justify-self: right;
-		}
-
-		img {
-			height: 64px;
-			margin: auto 0;
-		}
-
-		.address {
-			padding-left: 32px;
-			margin: auto 0;
-		}
-	}
-
-	.socials {
-		justify-self: right;
-		font-size: 2rem;
-		margin: auto 0;
-		word-spacing: 64px;
-
-		:hover {
-			color: $color-accent;
-		}
-
-		:active {
-			color: $color-accent-darken;
-		}
-	}
-}
-
-form {
+.contact {
 	display: flex;
 	flex-direction: column;
-	margin: 64px auto 128px auto;
+	padding: 64px 32px;
 	max-width: 1200px;
-}
+	margin: 0 auto;
 
-.newsletter {
-	display: flex;
-	flex-direction: column-reverse;
-	gap: 64px;
-
-	label {
-		max-width: 400px;
+	h2 {
+		padding: 64px 0px 32px 0;
+		font-family: $font-stack-logo;
+		text-transform: uppercase;
+		font-size: 2rem;
 		margin: 0 auto;
 		text-align: center;
-		font-family: $font-stack-logo;
-		font-weight: bold;
-		color: $color-accent;
-		font-size: 2rem;
 	}
 
-	input {
-		width: 300px;
-		margin: 0 auto;
-		border: none;
-		border-bottom: 2px solid $color-accent-darken;
-	}
-}
-
-#submit {
-	margin: 64px auto 16px auto;
-	background-color: $color-whitespace;
-	border: 3px solid $color-accent-darken;
-	color: $color-accent-darken;
-	border-radius: 8px;
-	padding: 8px 0;
-	font-family: $font-stack-logo;
-	text-align: center;
-	width: 156px;
-	cursor: pointer;
-	user-select: none;
-	text-transform: uppercase;
-	font-weight: bold;
-}
-
-#submit:hover {
-	border: 3px solid $color-accent;
-	color: $color-whitespace;
-	background-color: $color-accent;
-}
-
-#submit:active {
-	background-color: $color-accent-darken;
-	border: 3px solid $color-accent-darken;
-}
-
-@media (max-width: 950px) {
-	h1 {
-		font-size: 2rem;
+	p {
+		font-size: 1.3rem;
+		text-align: center;
 	}
 
-	#hero-img {
-		width: 400px;
-		height: 400px;
-	}
-
-	.hero {
-		column-gap: 24px;
-	}
-
-	.hero-left {
-		line-height: 24px;
-		font-size: 1.2rem;
-	}
-
-	.product-card-stack {
+	form {
+		padding: 24px;
+		display: flex;
 		flex-direction: column;
-		padding: 124px 0;
-		row-gap: 64px;
+		max-width: 400px;
+		margin: 0 auto;
+		row-gap: 16px;
+	}
+	button {
+		margin: 24px auto 16px auto;
+		background-color: $color-accent;
+		border: 3px solid $color-accent;
+		color: $color-whitespace;
+		border-radius: 8px;
+		padding: 8px 0;
+		font-family: $font-stack-logo;
+		text-align: center;
+		width: 156px;
+		cursor: pointer;
+		user-select: none;
+		text-transform: uppercase;
+		font-weight: bold;
 	}
 
-	.video-desc {
-		line-height: 24px;
+	button:hover {
+		border: 3px solid $color-primary-lighten;
+		color: $color-whitespace;
+		background-color: $color-primary-lighten;
+	}
+
+	button:active {
+		background-color: $color-accent-darken;
+		border: 3px solid $color-accent-darken;
+	}
+
+	h3 {
+		font-size: 1.3rem;
+		margin: 0 auto;
+		padding: 24px;
+	}
+
+	.links {
+		display: flex;
+		margin: 0 auto;
+		gap: 16px;
+		font-size: 1.3rem;
+
+		i {
+			padding: 0 8px;
+		}
+	}
+
+	a:hover {
+		color: $color-accent;
+	}
+
+	a:active {
+		color: $color-accent-darken;
 	}
 }
 
-@media (max-width: 800px) {
-	nav {
-		font-size: 1.2rem;
-		column-gap: 8px;
-	}
+@media (max-width: 900px) {
+	.about {
+		display: flex;
+		flex-direction: column;
+		row-gap: 32px;
 
-	.hero-bg {
-		background: rgb(245, 0, 83);
-		background: linear-gradient(
-			180deg,
-			rgba(245, 0, 83, 1) 30%,
-			rgba(255, 254, 254, 0) 80%
-		);
-	}
+		img {
+			width: 400px;
+			height: auto;
+		}
 
-	.hero {
-		flex-direction: column-reverse;
-	}
+		.tools {
+			display: flex;
+			flex-direction: row;
+			text-align: center;
+			margin: auto 0;
+			gap: 16px;
 
-	#hero-img {
-		width: auto;
-		height: auto;
-		max-width: 700px;
-	}
-
-	.hero-left {
-		color: $color-primary;
-	}
-
-	.video-desc {
-		flex-direction: column-reverse;
-		padding: 64px 32px;
-	}
-
-	iframe {
-		height: 300px;
-		width: auto;
-	}
-
-	.numbers {
-		padding: 32px 32px;
-	}
-
-	.features {
-		padding: 64px 32px;
-	}
-
-	.product-card-stack {
-		padding: 64px 32px;
-	}
-
-	.pre-test {
-		padding: 64px 32px;
-	}
-
-	.footer {
-		column-gap: 16px;
+			p {
+				margin: auto 0;
+				border-bottom: solid $color-accent;
+			}
+		}
 	}
 }
 
 @media (max-width: 600px) {
-	.logo {
-		margin: 0 auto;
-	}
-
 	header {
-		flex-direction: column;
-		padding-bottom: 32px;
-
-		.logo-img {
-			margin: auto 0;
+		nav {
+			font-size: 1rem;
 		}
 	}
 
-	.logo-link {
-		text-align: left;
-		margin: 0;
+	.about {
+		.tools {
+			h2 {
+				font-size: 1.1rem;
+			}
+
+			p {
+				font-size: 1rem;
+				margin: auto 0;
+				border-bottom: solid $color-accent;
+			}
+		}
 	}
 
-	nav {
-		margin: 0 auto;
-		font-size: 1.2em;
-		column-gap: 32px;
+	.project-tile {
+		img {
+			width: 350px;
+			height: auto;
+		}
+	}
+
+	.contact {
+		form {
+			max-width: 350px;
+		}
 	}
 }
